--- a/recursos-nativos/package.json
+++ b/recursos-nativos/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.71.8",
     "react-native-web": "~0.18.10",
     "expo-screen-orientation": "~5.1.1",
-    "expo-notifications": "~0.18.1"
+    "expo-notifications": "~0.18.1",
+    "expo-contacts": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
