--- a/recursos-nativos/package.json
+++ b/recursos-nativos/package.json
@@ -15,15 +15,15 @@
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.15",
     "expo-battery": "^7.1.1",
+    "expo-contacts": "~12.0.1",
     "expo-device": "^5.2.1",
+    "expo-notifications": "~0.18.1",
+    "expo-screen-orientation": "~5.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-web": "~0.18.10",
-    "expo-screen-orientation": "~5.1.1",
-    "expo-notifications": "~0.18.1",
-    "expo-contacts": "~12.0.1"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
