--- a/recursos-nativos/package.json
+++ b/recursos-nativos/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.15",
     "expo-battery": "^7.1.1",
+    "expo-camera": "^13.4.2",
     "expo-contacts": "~12.0.1",
     "expo-device": "^5.2.1",
     "expo-notifications": "~0.18.1",
