--- a/recursos-nativos/package.json
+++ b/recursos-nativos/package.json
@@ -15,11 +15,12 @@
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.15",
     "expo-battery": "^7.1.1",
-    "expo-camera": "^13.4.2",
+    "expo-camera": "~13.2.1",
     "expo-contacts": "~12.0.1",
     "expo-device": "^5.2.1",
     "expo-notifications": "~0.18.1",
     "expo-screen-orientation": "~5.1.1",
+    "expo-sensors": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
