--- a/recursos-nativos/package.json
+++ b/recursos-nativos/package.json
@@ -25,7 +25,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "expo-screen-capture": "~5.1.1",
+    "expo-media-library": "~15.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
