--- a/recursos-nativos/package.json
+++ b/recursos-nativos/package.json
@@ -27,7 +27,8 @@
     "react-native": "0.71.8",
     "react-native-web": "~0.18.10",
     "expo-screen-capture": "~5.1.1",
-    "expo-media-library": "~15.2.3"
+    "expo-media-library": "~15.2.3",
+    "expo-local-authentication": "~13.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
