--- a/recursos-nativos/package.json
+++ b/recursos-nativos/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@mdi/js": "^7.2.96",
+    "@mdi/react": "^1.6.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
@@ -18,17 +20,20 @@
     "expo-camera": "~13.2.1",
     "expo-contacts": "~12.0.1",
     "expo-device": "^5.2.1",
+    "expo-local-authentication": "~13.3.0",
+    "expo-location": "~15.1.1",
+    "expo-media-library": "~15.2.3",
     "expo-notifications": "~0.18.1",
+    "expo-screen-capture": "~5.1.1",
     "expo-screen-orientation": "~5.1.1",
     "expo-sensors": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.13",
+    "react-native-maps": "1.3.2",
     "react-native-web": "~0.18.10",
-    "expo-screen-capture": "~5.1.1",
-    "expo-media-library": "~15.2.3",
-    "expo-local-authentication": "~13.3.0"
+    "react-simple-maps": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
